...

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:fontFamily="@font/montserrat_semi_bold"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_plan_gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tvPackageFrom"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvSpeedFrom"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvServiceDateFrom"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvLocationFrom"
                            style="@style/MontserratSemiBold"
                            android:layout_width="200dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/btnChangePlanGold"
                                    android:layout_width="137dp"
                                    android:layout_height="match_parent"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_plan_silver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tvPackageTo"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvSpeedTo"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvServiceDateTo"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvLocationTo"
                            style="@style/MontserratSemiBold"
                            android:layout_width="200dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/btnChangePlanSilver"
                                    android:layout_width="137dp"
                                    android:layout_height="match_parent"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_plan_bronze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tvPackageBronze"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvSpeedBronze"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvServiceDateBronze"
                            style="@style/MontserratSemiBold"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/tvLocationBronze"
                            style="@style/MontserratSemiBold"
                            android:layout_width="200dp"
...

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/btnChangePlanBronze"
                                    android:layout_width="137dp"
                                    android:layout_height="match_parent"
...
