<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/textViewlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/secPrimary"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="Please sign in to continue."
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:hint="Email"
            app:hintTextColor="@color/contentColor"
            app:boxStrokeColor="@color/contentColor"
            app:boxStrokeErrorColor="@color/red"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:maxLines="1"
                android:textColor="@color/secondaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:hint="Password"
            app:hintTextColor="@color/contentColor"
            app:boxStrokeColor="@color/contentColor"
            app:boxStrokeErrorColor="@color/red"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLines="1"
                android:textColor="@color/secondaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.example.capstoneproject.ui.customView.emailEditText-->
<!--            android:id="@+id/etEmail"-->
<!--            android:focusable="false"-->
<!--            style="@style/EditText"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:hint="Email"-->
<!--            android:imeOptions="actionNext"-->
<!--            android:textSize="14sp"-->
<!--            android:textColor="@color/secondaryColor"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/passwordtext"-->
<!--            style="@style/EditTextNoPadding"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            app:hintEnabled="false"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/etEmail"-->
<!--            app:passwordToggleEnabled="true">-->

<!--            <com.example.capstoneproject.ui.customView.passwordEditText-->
<!--                android:id="@+id/etPassword"-->
<!--                android:focusable="false"-->
<!--                style="@style/EditTextPassword"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:imeOptions="actionNext"-->
<!--                android:textSize="14sp"-->
<!--                android:hint="Password"-->
<!--                android:inputType="textPassword"-->
<!--                android:textColor="@color/secondaryColor" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:id="@+id/textforgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="end"
            android:text="Forgot Password?"
            android:textColor="@color/secPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            android:gravity="center">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="3dp"
                android:text="Don't have an account yet?"
                android:textAlignment="center"
                android:textColor="@color/secPrimary"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/regishere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sign up"
                android:textColor="@color/contentColor"
                android:textSize="14sp"
                android:textStyle="italic"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toEndOf="@+id/signupText"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Login"
            android:textColor="@color/secondaryColor"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textforgotpassword">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp"
                android:foreground="?attr/selectableItemBackground">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/bgBtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/cardview_border_no_padding"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvBtnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="Login"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


<!--       Misalnya belum aktifin biometric ini visiblenya dimatiin aja-->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnBiometric"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp"
                android:foreground="?attr/selectableItemBackground">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/bgBtnBiometric"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_border_no_padding"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icBtnBiometric"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_fingerprint"
                        app:tint="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
